--- a/app/views/playlists/_bookmark_fields.html.erb
+++ b/app/views/playlists/_bookmark_fields.html.erb
@@ -12,7 +12,7 @@
 				<%= f_ub_bu.label :url%><br />
 				<%= f_ub_bu.text_field :url , {'data-remote' => true}%><br /><br />
 			<% end %>
-			<%= link_to "Remove Bookmark", '/playlists/'+@playlist.id.to_s+'/destroy_bookmark/'+f.object.id.to_s, :confirm => "Are you sure you want to delete this bookmark?", class: "remove_bookmark", :remote => true%>
+			<%= link_to "Remove Bookmark", [@playlist, f.object], :method => :delete, :remote => true, :confirm => "Are you sure you want to delete this bookmark?", class: "remove_bookmark" %>
 		</fieldset>
 	</div>
 	<%= f.hidden_field :id %>
