bookmarklets have CORS issue to be fixed, moving between playlists and the default playlist is working

--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -28,6 +28,7 @@
 	float:right;
 	margin: 10px;
 }
+
 .update_bookmark_button{
 	float:right;
 	display:none;
@@ -39,3 +40,16 @@
 	margin: 10px;
 }
 
+.move_bookmark {
+	position:relative;
+	right:40%;
+	float:right;
+}
+
+.playlist_link_indent {
+	float:right;
+}
+
+.playlist_link {
+	width:480px;
+}
