--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -15,11 +15,7 @@
     <%= f.label :playlist_name %><br />
     <%= f.text_field :playlist_name %>
   </div>
-  <!-- <fieldset>
-    <div class="field">
-
-  </fieldset> -->
-  <div class="actions"><%= f.submit "Sign Up" %></div>
+  <div class="actions"><%= f.submit "Create Playlist" %></div>
 <% end %>
 
 <p>
