--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 		<%= link_to 'Log In', login_path %>
 		<%= link_to 'Sign Up', signup_path %>
 	<% else %>
-		Logged in as <%= current_user.username %>
+		Logged in as <%=link_to current_user.username, current_user %>
 		<%= link_to 'Log Out', logout_path %>
 	<% end %>
 
