--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,7 +1,12 @@
 <h1>Playlist index</h1>
-<% @playlists.each do |playlist| %>
-  <p><%= link_to playlist.playlist_name, playlist %></p>
+<ul>
+<% @lists.each do |pl| %>
+	<li class="playlist_link"><%= link_to pl.playlist_name, pl %>&#160;&#160;&#160;&#160;&#160;
+    <%= link_to "edit", edit_playlist_path(pl) %> | 
+    <%= link_to "delete", playlist_path(pl), class: "remove_playlist", :remote => true, :method => :delete, :confirm => "This deletes the playlists but puts the otherwise un-playlisted videos in that section" %> | 
+    <%= link_to "delete list with bookmarks", playlist_path(pl), class: "remove_playlist", :remote => true, :method => :delete, :confirm => "This deletes the playlists and gets rid of all the bookmarks inside." %>
+  </li>
 <% end %>
-
+</ul>
 
 <%= link_to 'Create New Playlist', new_playlist_path%>
