--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -6,6 +6,6 @@
 </ul>
 <p>
 <%= link_to 'Create New Playlist', new_playlist_path%> | 
-<%= link_to 'Playlist Index', playlists_url%> |
+<%= link_to 'Playlist Index', playlists_path%> |
 <%= link_to 'Edit Playlist', edit_playlist_path(@playlist)%>
 </p>
