--- a/app/views/user_bookmarks/_bookmark_fields.html.erb
+++ b/app/views/user_bookmarks/_bookmark_fields.html.erb
@@ -1,22 +1,34 @@
 <div class="bookmark">
 	<div class ="show_bookmark">
-		<%= "bookmark name: "+((user_bookmark.bookmark_name.nil?) ? "": user_bookmark.bookmark_name )+" bookmark url: "+((user_bookmark.bookmark_url.url.nil?) ? "": user_bookmark.bookmark_url.url )%>
-		<%= link_to 'edit', edit_playlist_user_bookmark_path(user_bookmark, @playlist), class: 'edit_bookmark_button' %>
+		<%= link_to ((user_bookmark.bookmark_name.nil?) ? user_bookmark.bookmark_url.url : user_bookmark.bookmark_name ),user_bookmark.bookmark_url.url%>
+		<%= link_to 'edit', edit_playlist_user_bookmark_path(@playlist, user_bookmark), class: 'edit_bookmark_button' %>
 	</div>
 	<div class="edit_bookmark">
 	<%= form_for user_bookmark, :url => [@playlist, user_bookmark] , :html => {:method => :put, "data-type" => "html"}, :remote => :true do |f| %>
 	  <fieldset>
 	  	<%= link_to 'collapse', '#', class: 'show_bookmark_button' %>
-	  	<%= link_to 'revert',  edit_playlist_user_bookmark_path(user_bookmark, @playlist) , class: 'reload_edit_bookmark_button', :html =>{"data-type" => "html"}, :remote => true %>
+	  	<%= link_to 'revert',  edit_playlist_user_bookmark_path(@playlist, user_bookmark) , class: 'reload_edit_bookmark_button', :html =>{"data-type" => "html"}, :remote => true %>
 	  	<%= link_to 'save', '#', class: 'update_bookmark_button' %>
-			<%= f.label :bookmark_name%><br />
-			<%= f.text_field :bookmark_name %><br /><br />
-			<%= f.fields_for :bookmark_url do |f_ub_bu| %>
-				<%= f_ub_bu.label :url%><br />
-				<%= f_ub_bu.text_field :url %><br /><br />
-			<% end %>
-			<%= link_to "Remove Bookmark", [@playlist, f.object], :method => :delete, :remote => true, :confirm => "Are you sure you want to delete this bookmark?", class: "remove_bookmark" %> <br />
-			<%= f.hidden_field :id %>
+	  	<% if current_user.lists.count > 1 %>
+	  	<div class="move_bookmark">
+	  		<br />
+	  		<%= radio_button_tag 'user_bookmark_move', 'copy' %><%= label_tag 'user_bookmark_move_copy', 'copy'%> <br />
+	  		<%= radio_button_tag 'user_bookmark_move', 'cut' %><%= label_tag 'user_bookmark_move_cut', 'cut' %> <br />
+	  		<%= label_tag 'user_bookmark_move_paste', 'and paste to'%><br />
+	  		<%= select_tag 'user_bookmark_move_paste', options_from_collection_for_select((current_user.lists-[user_bookmark.playlist,current_user.default_list]), "id","playlist_name") %>
+	  		<%= link_to "move bookmark", '/playlists/'+@playlist.id.to_s+'/user_bookmarks/'+user_bookmark.id.to_s+'/move', class:"move_bookmark_submit", :remote => true, :method => :post, "data-type" => "json" %>
+	  	</div>
+	  	<% end %>
+	  	<div class="edit_bookmark_fields"%>
+				<%= f.label :bookmark_name%><br />
+				<%= f.text_field :bookmark_name %><br /><br />
+				<%= f.fields_for :bookmark_url do |f_ub_bu| %>
+					<%= f_ub_bu.label :url%><br />
+					<%= f_ub_bu.text_field :url %><br /><br />
+				<% end %>
+				<%= link_to "Remove Bookmark", [@playlist, user_bookmark], :method => :delete, :remote => true, :confirm => "Are you sure you want to delete this bookmark?", class: "remove_bookmark" %> <br />
+				<%= f.hidden_field :id %>
+			</div>
 		</fieldset>
 	<% end %>
 	</div>
