--- a/app/views/user_bookmarks/new.html.erb
+++ b/app/views/user_bookmarks/new.html.erb
@@ -1,3 +1,10 @@
+<h2><%= "New Bookmark for "%>
+  <% if(@playlist == current_user.default_list) %>
+    <%= link_to current_user.username, current_user%></h2>
+  <% else %>
+    <%= link_to @playlist.playlist_name, @playlist %>
+  <% end %>
+</h2>
 <%= form_for @user_bookmark, :url => [@playlist, @user_bookmark] , :method => :post do |f|%>
   <% if @user_bookmark.errors.any? %>
     <div class="error_messages">
