--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,35 @@
 <h1><%= @user.username %></h1>
-
+<%= form_for @default_list do |f| %>
+  <% if @default_list.errors.any? %>
+    <div class="error_messages">
+      <h2>Form is invalid</h2>
+      <ul>
+        <% @default_list.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+<% end %>
+<h2>Uncategorized Bookmarks</h2>
+<%= link_to "Add Bookmark", new_playlist_user_bookmark_path(@default_list)  %>
+<% @default_list.user_bookmarks.each do |user_bookmark| %>
+	<%= render :partial =>'/user_bookmarks/bookmark_fields.html.erb', :locals => {:user_bookmark => user_bookmark, :@playlist => @default_list} %>
+<% end %>
+<br /><br />
+<h2>Playlists</h2>
 <ul>
-<% @playlists.each do |pl| %>
-	<li><%= link_to pl.playlist_name, pl %>&#160;&#160;&#160;<%= link_to "edit", edit_playlist_path(pl) %></li>
+<% @lists.each do |pl| %>
+	<li class="playlist_link">
+    <%= link_to pl.playlist_name, pl %>
+    <div class="playlist_link_indent"%>
+      <%= link_to "edit", edit_playlist_path(pl) %> | 
+      <%= link_to "delete", playlist_path(pl), class: "remove_playlist", :remote => true, :method => :delete, :confirm => "This deletes the playlists but puts the otherwise un-playlisted videos in that section" %> | 
+      <%= link_to "delete list with bookmarks", playlist_path(pl), class: "remove_playlist", :remote => true, :method => :delete, :confirm => "This deletes the playlists and gets rid of all the bookmarks inside." %>
+    </div>
+  </li>
 <% end %>
 </ul>
+
 
 <%= link_to "New Playlist", new_playlist_path %>
