--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -53,3 +53,25 @@
 .playlist_link {
 	width:480px;
 }
+
+#linkDrop {
+	display:box;
+	width:500px;
+	height:300px;
+	background:#FFC4A0;
+	border-radius:10px;
+	border-width:0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
