--- a/app/views/jsfiles/_bookmarklet_content.html.erb
+++ b/app/views/jsfiles/_bookmarklet_content.html.erb
@@ -1,3 +1,4 @@
+<div style="display:none"><%= csrf_meta_tags %></div>
 <div class="floatright">
 <% if !(current_user.nil?) %>
 	Hi <%= current_user.username %><br />
