--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,13 @@
 	<% if current_user.nil? %>
 		<%= link_to 'Log In', login_path %>
 		<%= link_to 'Sign Up', signup_path %>
+		<%= link_to 'Save Your Links', temp_users_path %>  
 	<% else %>
-		Logged in as <%=link_to current_user.username, current_user %>
+		<% if current_user.username.nil? #temp user %>
+			Logged in <%= link_to 'Upgrade to a full account', edit_user_path(current_user)%>
+		<% else %>
+			Logged in as <%=link_to current_user.username, current_user %>
+		<% end %>
 		<%= link_to 'Log Out', logout_path %>
 	<% end %>
 
