changing bookmark showing/editing to the 2 column layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>BookmarkSite</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-	<%= render '/layouts/header' %>
-
-<%= yield %>
-
-<%= debug params %>
-<%= debug flash %>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Myapp" %></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= yield(:head) %>
+  </head>
+  <body>
+    <%= render '/layouts/header' %>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span2">
+          <%= render '/layouts/sidebar' %>
+        </div>
+        <div class="span10">
+          <%= render '/layouts/messages' %>
+          <%= yield %>
+        </div>
+      </div>
+    </div> <!--! end of .container -->
+  </body>
 </html>
