--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,46 @@
-<header>
-	<%= link_to 'User Index', users_path %>
-	<% if current_user.nil? %>
-		<%= link_to 'Log In', login_path %>
-		<%= link_to 'Sign Up', signup_path %>
-		<%= link_to 'Save Your Links', temp_users_path %>  
-	<% else %>
-		<% if current_user.username.nil? #temp user %>
-			Logged in <%= link_to 'Upgrade to a full account', edit_user_path(current_user)%>
-		<% else %>
-			Logged in as <%=link_to current_user.username, current_user %>
-		<% end %>
-		<%= link_to 'Log Out', logout_path %>
-	<% end %>
-
-	<% if flash[:notice] %>
-		<div class="notice"> <%= flash[:notice] %></div>
-	<% end %>
-	<% if params[:message] %>
-		<div class="message"> <%= params[:message] %></div>
-	<% end %>
-</header>
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <%= link_to "Project Name", home_path, class:"brand" %>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li><%= link_to "How", how_path %></li>
+          <li><%= link_to "About", about_path %></li><!-- this stuff can probably go to the footer -->
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+        <ul class="nav pull-right">
+        	<% if current_user.nil? %>
+	            	<li><a href="#">1 Click Save</a></li>
+	              <li><a href="/users/sign_up">Sign Up</a></li>
+	              <li class="divider-vertical"></li>
+	              <li class="dropdown">
+	                <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+	                <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+	                  <form>
+	                    <input type="text" placeholder="Username">
+	                    <input type="password" placeholder="Password">
+	                    <button type="submit" class="btn">Sign in</button>
+	                  </form>
+	                </div>
+	              </li>
+          <% else %>
+            <% if current_user.username.nil? #temp user %>
+		            	<li><%= link_to 'Upgrade to a full account', edit_user_path(current_user),"		tabindex" => "-1" %></li>
+		            	<li><%= link_to 'Log Out', logout_path , "tabindex" => "-1"%></li> <!-- some kind of notice that temp users can't get shit back if they close this -->
+            <% else %>
+		              <li class="dropdown">
+		                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %> <b class="caret"></b></a>
+		                <ul class="dropdown-menu">
+				            	<li><%=link_to "Bookmarks Home", current_user , "tabindex" => "-1"%></li>
+											<li><%=link_to "Customize Profile", '#', "tabindex" => "-1"%></li>
+		                  <li class="divider"></li>
+											<li><%= link_to 'Log Out', logout_path , "tabindex" => "-1"%></li>
+		                </ul>
+		              </li>
+            <% end %>
+          <% end %>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </div>
+</div>
