--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,13 +4,10 @@
     <li><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
-    <li class="nav-header">Sidebar</li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
+    <li class="nav-header">Actions</li>
+    <li><%= link_to 'Playlist', @playlist%></li>
+    <li><%= link_to 'Create New Playlist', new_playlist_path%></li>
+    <li><%= link_to 'Playlist Index', playlists_path%></li>
     <li class="nav-header">Sidebar</li>
     <li><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
