add modal login and playthru, modal bookmark add, and instant account

--- a/app/views/jsfiles/playground.html.erb
+++ b/app/views/jsfiles/playground.html.erb
@@ -86,26 +86,23 @@
         </div>
   
         <!-- Example row of columns -->
-        <div class="row">
-          <div class="span4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut   fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
+        <div class="row-fluid">
+          <div class="span2">
+            <div class="media">
+              <a class="pull-left" href="#">
+              <img class="media-object thumbnail cycle" data-tnprefix = "http://img100.xvideos.com/videos/thumbslll/e8/7e/12/e87e120ca2517d92f9389028136420f8/e87e120ca2517d92f9389028136420f8" data-tnindex = "28" src="http://img100.xvideos.com/videos/thumbslll/e8/7e/12/e87e120ca2517d92f9389028136420f8/e87e120ca2517d92f9389028136420f8.28.jpg">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">Denise Milani</h4>
+            </div> 
           </div>
           <div class="span4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut   fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
-          </div>
-          <div class="span4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod   semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
+            <iframe scrolling="no" frameborder="0" width="450" height="350" src="http://localhost:3000/jsfiles/embed"></iframe> 
           </div>
         </div>
+        <hr>
       </div>
-      <hr>
-        </div>
       <footer>
         <p>&copy; Company 2013</p>
       </footer>
