--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -2,22 +2,77 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//playlist classes
+
+
+//sidebar classes
+.well {
+	background-color:#E6E6E6;
+}
+
 
 //list classes
+#bookmark_list_view {
+	hr {
+		margin:4px;
+		//margin-bottom:14px;
+		border-top:1px solid #CCCCCC;
+	}
 
+	.hrspacer {
+		border:none;
+	}
+}
 .show_bookmark {
-	height:30px;
-	border-style:solid;
-	border-color:#5588FF;
+
 	border-radius:4px;
-	border-width:1px;
-	margin:3px
+	height:80px;
+	.offset-original {
+		margin-right:18px;
+	}
+	.span2, .span5, {
+		height:80px;
+	}
+	.list-title-link {
+		margin-left:5px;
+		height:80px;
+		position:relative;
+		display: table; 
+		a {
+			display: table-cell; 
+			vertical-align: middle; 
+		}
+	}
+
+	.list-action-links{
+		position:relative;
+		height:80px;
+		width:160px;
+		float:right;
+		a {
+			width:60px;
+			text-align:center;
+			position:absolute;
+			top:29px;
+		}
+		a.expand {
+			right:0px;
+		}
+		a.watch {
+			left:0px;
+		}
+	}
+	img {
+		height:72px;
+	}
+	p.dunno-lol{
+		font-size:20px;
+		line-height:75px;
+		text-align:center;
+	}
+
 }
 
-.edit_bookmark_button {
-	margin:5px;
-	float: right;
-}
 //detail classes
 #detail_bookmark_view {
 	margin:10px;
@@ -25,40 +80,51 @@
 }
 
 #detail_bookmark_view_container{
-	height:100%;
+	position:fixed;
+	margin-right:7px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-}
-
-.detail_container_color{
-	background:#A6FFAD;
 }
 
 .detail_bookmark{
 	display:none;
 }
 
-//detail action classes
-.show_bookmark_detail, .edit_bookmark_fields, .watch_bookmark, .move_bookmark {
+.show_bookmark_detail, .edit_bookmark_fields, .move_bookmark {
   min-height: 20px;
-  padding: 19px;
+  padding: 10px;
   margin-bottom: 20px;
-  background-color: #86DF8D;
-  border: 1px solid #96EF9D;
+  background:#F1F1F1;
+  border: 6px solid #C0C0C0;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.edit_bookmark_fields, .move_bookmark {
+	display: none;
 }
 
 .show_bookmark_detail {
+	pre, p {
+		display:inline-block;
+	}
+	pre {
+	  font-family: Consolas, Monaco, Menlo, "Courier New", monospace;
+		width:65%;
+		vertical-align:middle;
+		word-wrap:normal;
+		a {
+			word-wrap:break-word;
+		}
+	}
+	p {
+		width:14%;
+	}
 }
 
 .edit_bookmark_fields {
-	display:none;
 	label {
 		display:inline;
 	}
@@ -68,21 +134,32 @@
 	}
 }
 
-.watch_bookmark {
-	display:none;
-}
-
 .move_bookmark {
-	display:none;
 }
 
+.watch_bookmark {
 
-//action buttons
+}
 
-.edit_link, .collapse_link, .move_link, .remove_link {
-	float:right;
-	margin: 10px;
+//detail action links
+.detail-action-links{
+	margin-bottom:20px;
+}
+
+.collapse_link, .remove_link, .watch_link {
+	margin-right:10px;
+	margin-left:10px;
 	//border-radius:10px;
+}
+
+.edit_link {
+	margin-right:0px;
+	margin-left:10px;
+}
+
+.move_link {
+	margin-right:10px;
+	margin-left:0px;
 }
 
 .save_link, .revert_link{
@@ -91,34 +168,19 @@
 	margin: 10px;
 }
 
-//playlist list
-
-.playlist_link_indent {
-	float:right;
-}
-
-.playlist_link {
-	width:480px;
-}
 
 #linkDrop {
-	display:box;
-	width:500px;
-	height:300px;
-	background:#FFC4A0;
-	border-radius:10px;
-	border-width:0px;
+	opacity:0.0;
+	background:#9E9E9E;
+	z-index:-1;
+	position:fixed;
+	height:100%;
+	width:100%;
+	top:0%;
+	left:0%;
+	h1 {
+		top:43%;
+		left:43%;
+		position:fixed;
+	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
