--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -5,14 +5,14 @@
 	<% end %>
 </ul>
 
-<div id="linkDrop">
-	<%= form_for :bookmark_url, :url => bookmark_urls_path, :method => :post do |f| %>
-		<%= f.hidden_field :url %>
-		<%= f.hidden_field 'playlist_id', :value => @playlist.id %>
-	<% end %>
-</div>
 <p>
 <%= link_to 'Create New Playlist', new_playlist_path%> | 
 <%= link_to 'Playlist Index', playlists_path%> |
 <%= link_to 'Edit Playlist', edit_playlist_path(@playlist)%>
 </p>
+<!-- <div id="linkDrop">
+	<%= form_for :bookmark_url, :url => bookmark_urls_path, :method => :post do |f| %>
+		<%= f.hidden_field :url %>
+		<%= f.hidden_field 'playlist_id', :value => @playlist.id %>
+	<% end %>
+</div> -->
